--- a/src/scss/app/workspace.scss
+++ b/src/scss/app/workspace.scss
@@ -1,3 +1,3 @@
 .mod-root .workspace-tab-header-status-icon {
-	color: var(--text-normal);
+	color: var(--text-muted);
 }
